chapters/chapter12/apigateway-deployment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apigateway
  name: apigateway
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: apigateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apigateway
  name: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      serviceAccountName: apigateway
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: CATALOG_SERVICE_HOST
          value: catalog.istioinaction.svc.cluster.local
        - name: CATALOG_SERVICE_PORT
          value: "80"
        - name: FORUM_SERVICE_HOST
          value: forum.example.com
        - name: FORUM_SERVICE_PORT
          value: "80"
        # TODO
        image: rinormaloku/apigateway:latest
        imagePullPolicy: Always
        name: apigateway
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
